[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_tools"
version = "0.1.0"
description = "PDF manipulation and Markdown conversion toolkit"
authors = [
    {name = "Philip Orange", email = "git@philiporange.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC0-1.0"}
keywords = ["pdf", "markdown", "conversion", "extraction", "page-range"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.0",
    "markitdown==0.1.3",
    "PyPDF2>=3.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
pdftools = "pdf_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/philiporange/pdf_tools"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_tools*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pdf_tools = ["py.typed"]
